<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_chat"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chat" />

    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_out"
            android:checked="true"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_log_out" />

        <item
            android:id="@+id/nav_about"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>


</menu>