<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_text"
        android:layout_alignStart="@+id/email_text"
        android:layout_below="@+id/email_text"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/email_password_confirm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/button_email_confirm"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true" />

</RelativeLayout>